n=48 in tests, build.sbt fixes